Closed Bug 1312080 Opened 8 years ago Closed 8 years ago

BackgroundHangMonitor for force paint in the content process should account for JS not running before the next paint

Categories

(Toolkit :: Telemetry, defect)

49 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: mconley, Unassigned)

References

Details

Attachments

(2 files)

The work that was landed in bug 1310880 does a good job of collecting thread hangs that occur between the point where we request to force paint, and the next time JS is interrupted so that we can paint. However, it doesn't account for the possibility that the paint will occur before JS is even run. We should account for that.
Comment on attachment 8803487 [details] Bug 1312080 - Repeated calls to BackgroundHangMonitor::NotifyWait shouldn't unnecessarily wake the BackgroundHangThread. https://reviewboard.mozilla.org/r/87734/#review86712
Attachment #8803487 - Flags: review?(wmccloskey) → review+
Comment on attachment 8803488 [details] Bug 1312080 - Tell the BackgroundHangMonitor for force paint in the content process to wait after the next paint, even if we weren't interrupting JS. " https://reviewboard.mozilla.org/r/87736/#review86716
Attachment #8803488 - Flags: review?(wmccloskey) → review+
Pushed by mconley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/24bfff012930 Repeated calls to BackgroundHangMonitor::NotifyWait shouldn't unnecessarily wake the BackgroundHangThread. r=billm https://hg.mozilla.org/integration/autoland/rev/c4eee1d6a915 Tell the BackgroundHangMonitor for force paint in the content process to wait after the next paint, even if we weren't interrupting JS. r=billm"
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: