Bug 1312080 - Tell the BackgroundHangMonitor for force paint in the content process to wait after the next paint, even if we weren't interrupting JS. r=billm"

MozReview-Commit-ID: 1Rk2VN1pR3C